# snake

./: CMakeLists.txt  configure_cmake.sh
include/: data_types.h
src/: main.cpp.bak  wonsz.cpp  wonsz.h
testing/: main_test.cpp.bak  wonsz_test.cpp
