CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(Wonsz)

set (CMAKE_CXX_STANDARD 14)
set (CMAKE_CXX_FLAGS "-g -Wall")

SET(LIB_DIR lib)

INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(src)

FILE(GLOB_RECURSE SRC ./src/*.cpp)

SET(LIB_NAME wonsz_lib)
SET(HOST_NAME wonsz)

ADD_LIBRARY(${LIB_NAME} ${SRC})
ADD_EXECUTABLE(${HOST_NAME} ${SRC})

OPTION (TEST "Build all tests." OFF)

# Setting gtest
IF(TEST)
	ADD_SUBDIRECTORY(lib/googletest)

	ENABLE_TESTING()

	INCLUDE_DIRECTORIES(testing)

	FILE(GLOB_RECURSE TEST_SRC ./testing/*.cpp)

	ADD_EXECUTABLE(wonsz_test ${TEST_SRC})

	TARGET_LINK_LIBRARIES(wonsz_test ${LIB_NAME} gtest gtest_main)

	ADD_TEST(run_test wonsz_test)
ENDIF(TEST)
